--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="src/logo.png" alt="Logo MYASN" class="logo">
+    <img src="logo.png" alt="Logo MYASN" class="logo">
     <h1>Cari Data Pegawai</h1>
     <form id="nipForm">
       <input type="text" id="nip" placeholder="Masukkan NIP Anda" required>
