--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="src/logo.png" alt="Logo MYASN">
+      <img src="logo.png" alt="Logo MYASN">
       <h2>WALI KOTA TANGERANG SELATAN</h2>
       <hr>
       <h3>PETIKAN<br>KEPUTUSAN WALI KOTA TANGERANG SELATAN</h3>
