--- a/home.html
+++ b/home.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cari Data Pegawai - MYASN</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cek Data PNS Berdasarkan NIP - MyASN</title>
   <style>
     body {
       font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #dbeafe, #eff6ff);
-      height: 100vh;
+      background-color: #f3f4f6;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
       margin: 0;
     }
 
     .container {
       background: #fff;
       padding: 40px 50px;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
       text-align: center;
       width: 350px;
     }
 
     .logo {
       width: 100px;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
 
     h1 {
-      font-size: 20px;
-      margin-bottom: 25px;
+      font-size: 18px;
       color: #1e40af;
+      margin-bottom: 25px;
     }
 
     input {
       width: 100%;
       padding: 10px 15px;
-      font-size: 14px;
       border: 1px solid #cbd5e1;
-      border-radius: 8px;
-      outline: none;
+      border-radius: 6px;
+      font-size: 14px;
       margin-bottom: 15px;
     }
 
@@ -51,14 +50,14 @@
       color: white;
       border: none;
       padding: 10px;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
       font-size: 14px;
-      transition: 0.3s;
+      transition: background 0.3s;
     }
 
     button:hover {
-      background: #1e40af;
+      background: #1e3a8a;
     }
 
     .error {
@@ -70,11 +69,11 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Logo MYASN" class="logo">
-    <h1>Cari Data Pegawai</h1>
+    <img src="src/logo.png" alt="Logo MyASN" class="logo" />
+    <h1>Cek Data PNS Berdasarkan NIP</h1>
     <form id="nipForm">
-      <input type="text" id="nip" placeholder="Masukkan NIP Anda" required>
-      <button type="submit">Cari</button>
+      <input type="text" id="nip" placeholder="Masukkan NIP" required />
+      <button type="submit">Tampilkan</button>
       <div class="error" id="errorMsg"></div>
     </form>
   </div>
@@ -83,16 +82,17 @@
     const form = document.getElementById("nipForm");
     const errorMsg = document.getElementById("errorMsg");
 
-    form.addEventListener("submit", function(e) {
+    form.addEventListener("submit", function (e) {
       e.preventDefault();
       const nip = document.getElementById("nip").value.trim();
 
-      // Contoh NIP yang benar
+      // Contoh: hanya satu NIP yang valid
       if (nip === "19830103204102007") {
+        errorMsg.textContent = "";
         localStorage.setItem("nip", nip);
         window.location.href = "index.html";
       } else {
-        errorMsg.textContent = "❌ NIP tidak ditemukan, coba lagi.";
+        errorMsg.textContent = `❌ Data dengan NIP ${nip} tidak ditemukan.`;
       }
     });
   </script>
