--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="src/logo.png" alt="Logo MyASN" class="logo" />
+    <img src="logo.png" alt="Logo MyASN" class="logo" />
     <h1>Cek Data PNS Berdasarkan NIP</h1>
     <form id="nipForm">
       <input type="text" id="nip" placeholder="Masukkan NIP" required />
