--- a/index.html
+++ b/index.html
@@ -3,139 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Keputusan Wali Kota Tangerang Selatan</title>
+  <title>Cek Data PNS Berdasarkan NIP - MyASN</title>
+
   <style>
     body {
-      font-family: "Times New Roman", serif;
-      margin: 40px;
-      background-color: #fdfdfd;
-      color: #000;
-      line-height: 1.6;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(135deg, #e0f2fe, #f8fafc);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
     }
 
     .container {
-      max-width: 800px;
-      margin: auto;
       background: #fff;
-      padding: 40px 60px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      width: 420px;
+      margin-top: 60px;
+      padding: 30px 40px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
+      text-align: left;
     }
 
-    .header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    .header img {
-      width: 100px;
+    .logo {
+      display: flex;
+      justify-content: center;
       margin-bottom: 10px;
+    }
+
+    .logo img {
+      width: 120px;
     }
 
     h2 {
       text-align: center;
-      margin: 5px 0;
-      font-size: 18pt;
-      text-transform: uppercase;
+      font-size: 18px;
+      font-weight: 600;
+      color: #111;
+      margin-bottom: 25px;
     }
 
-    .title {
-      text-align: center;
-      font-weight: bold;
-      margin-top: 20px;
-      text-decoration: underline;
-    }
-
-    .content {
-      margin-top: 25px;
+    .hasil {
+      font-weight: 600;
+      color: #1e40af;
+      margin-bottom: 10px;
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 10px;
     }
 
     td {
+      padding: 6px 4px;
       vertical-align: top;
-      padding: 3px 0;
+      font-size: 14px;
     }
 
-    .footer {
-      margin-top: 40px;
-      text-align: right;
+    td:first-child {
+      width: 140px;
+      font-weight: 500;
+      color: #111;
     }
 
-    .footer p {
-      margin: 3px 0;
+    td:last-child {
+      color: #333;
     }
 
-    hr {
-      border: 0;
-      border-top: 2px solid #000;
-      margin: 20px 0;
+    .catatan {
+      font-size: 12px;
+      color: #6b7280;
+      margin-top: 25px;
+      text-align: justify;
+    }
+
+    .catatan strong {
+      color: #ef4444;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
-    <div class="header">
-      <img src="logo.png" alt="Logo MYASN">
-      <h2>WALI KOTA TANGERANG SELATAN</h2>
-      <hr>
-      <h3>PETIKAN<br>KEPUTUSAN WALI KOTA TANGERANG SELATAN</h3>
-      <p>Nomor : 808.1.4.5/Kep.73-Huk/2024</p>
-      <p><strong>TENTANG</strong></p>
-      <p><strong>PENGANGKATAN MENJADI PEGAWAI NEGERI SIPIL<br>WALIKOTA TANGERANG SELATAN</strong></p>
+    <div class="logo">
+      <img src="logo.png" alt="Logo MyASN">
     </div>
 
-    <div class="content">
-      <p><strong>Menimbang</strong> : dst;<br>
-      <strong>Mengingat</strong> : dst;<br>
-      <strong>Memperhatikan</strong> : Persetujuan teknis <em>Kepala Kantor Regional III BKN</em> Nomor : <strong>DG-23674000362</strong> tanggal <strong>08-05-2025</strong>.</p>
+    <h2>Cek Data PNS Berdasarkan NIP</h2>
 
-      <p><strong>MEMUTUSKAN :</strong></p>
-      <p><strong>Menetapkan :</strong> Kenaikan Pangkat Pegawai Negeri Sipil Atas Nama :</p>
+    <p class="hasil">Hasil Data:</p>
 
-      <table>
-        <tr><td>1.</td><td>Nomor</td><td>: 279</td></tr>
-        <tr><td>2.</td><td>Nama</td><td>: Detty Aria Sukowati, S.E</td></tr>
-        <tr><td>3.</td><td>Tempat/Tanggal Lahir</td><td>: Jakarta, 03-01-1983</td></tr>
-        <tr><td>4.</td><td>NIP</td><td id="nipField">: 19830103204102007</td></tr>
-        <tr><td>5.</td><td>Pendidikan</td><td>: S-1 Ekonomi</td></tr>
-        <tr><td>6.</td><td>Pangkat/Golongan</td><td>: Penata Tingkat I / III/d / 28-10-2024</td></tr>
-        <tr><td>7.</td><td>Jabatan</td><td>: Staf DPMPTSP</td></tr>
-        <tr><td>8.</td><td>Masa Kerja Golongan</td><td>: 18 Tahun 10 Bulan</td></tr>
-        <tr><td>9.</td><td>Gaji Pokok</td><td>: Rp. 26.295.000,-</td></tr>
-        <tr><td>10.</td><td>Unit kerja</td><td>: DPMPTSP</td></tr>
-        <tr><td>11.</td><td>Instansi</td><td>: PEMERINTAH KOTA TANGERANG SELATAN</td></tr>
-      </table>
+    <table>
+      <tr>
+        <td>Nama</td>
+        <td>: Detty Aria Sukowati, S.E</td>
+      </tr>
+      <tr>
+        <td>Jabatan</td>
+        <td>: Staf DPMPTSP</td>
+      </tr>
+      <tr>
+        <td>NIP</td>
+        <td>: 19830103204102007</td>
+      </tr>
+      <tr>
+        <td>Tempat/Tanggal Lahir</td>
+        <td>: Jakarta, 03 Januari 1983</td>
+      </tr>
+      <tr>
+        <td>Pendidikan Terakhir</td>
+        <td>: S-1 Ekonomi</td>
+      </tr>
+      <tr>
+        <td>Pangkat/Golongan</td>
+        <td>: Penata Tingkat I / III/d</td>
+      </tr>
+      <tr>
+        <td>TMT CPNS</td>
+        <td>: 27 Maret 2025</td>
+      </tr>
+      <tr>
+        <td>TMT PNS</td>
+        <td>: 09 Mei 2025</td>
+      </tr>
+      <tr>
+        <td>Golongan</td>
+        <td>: IV/d</td>
+      </tr>
+      <tr>
+        <td>Gaji Pokok</td>
+        <td>: Rp. 26.295.000,-</td>
+      </tr>
+      <tr>
+        <td>Unit Kerja</td>
+        <td>: DPMPTSP</td>
+      </tr>
+      <tr>
+        <td>Instansi Kerja</td>
+        <td>: Pemerintah Kota Tangerang Selatan</td>
+      </tr>
+      <tr>
+        <td>Kedudukan PNS</td>
+        <td>: Aktif</td>
+      </tr>
+    </table>
 
-      <p><strong>KEDUA</strong> : Terhitung mulai tanggal <strong>28-10-2024</strong> dinaikkan menjadi <strong>Pegawai Negeri Sipil</strong> golongan ruang <strong>III/b</strong>, dengan masa kerja golongan <strong>18 Tahun 10 Bulan</strong>, dan diberikan gaji pokok sebesar <strong>Rp. 26.295.000,-</strong>, ditambah dengan penghasilan lain berdasarkan ketentuan peraturan perundang-undangan yang berlaku.</p>
-
-      <p><strong>KETIGA</strong> : Keputusan wali kota ini mulai berlaku pada tanggal ditetapkan, apabila terdapat kekeliruan akan dilakukan perbaikan sebagaimana mestinya.</p>
-    </div>
-
-    <div class="footer">
-      <p>Ditetapkan di : Tangerang Selatan</p>
-      <p>Pada tanggal : 28 Oktober 2024</p>
-      <br><br>
-      <p><strong>WALI KOTA TANGERANG SELATAN</strong></p>
-      <br><br><br>
-      <p><strong>(........................................)</strong></p>
-    </div>
+    <p class="catatan">
+      <strong>*Catatan:</strong> Jika data tidak sesuai, harap hubungi BKD atau Biro Kepegawaian dengan membawa dokumen otentik.
+    </p>
   </div>
-
-  <script>
-    // Cegah akses langsung tanpa isi NIP
-    const nip = localStorage.getItem("nip");
-    if (!nip) {
-      alert("Silakan masukkan NIP Anda terlebih dahulu!");
-      window.location.href = "home.html";
-    } else {
-      // tampilkan NIP di halaman
-      document.getElementById("nipField").innerHTML = `: ${nip}`;
-    }
-  </script>
 </body>
 </html>
