--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cek Data PNS Berdasarkan NIP - MyASN</title>
+  <title>Cek Data ASN Berdasarkan NIP - MyASN</title>
 
   <style>
     body {
@@ -121,12 +121,12 @@
         <td>: Penata Tingkat I / III/d</td>
       </tr>
       <tr>
-        <td>TMT CPNS</td>
-        <td>: 27 Maret 2025</td>
+        <td>TMT CASN</td>
+        <td>: 28 Oktober 2024</td>
       </tr>
       <tr>
-        <td>TMT PNS</td>
-        <td>: 09 Mei 2025</td>
+        <td>TMT ASN</td>
+        <td>: - </td>
       </tr>
       <tr>
         <td>Golongan</td>
