--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cek Data PNS Berdasarkan NIP - MyASN</title>
+  <title>Cek Data ASN Berdasarkan NIP - MyASN</title>
   <style>
     body {
       font-family: "Poppins", sans-serif;
