--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 <body>
   <div class="container">
     <img src="logo.png" alt="Logo MyASN" class="logo" />
-    <h1>Cek Data PNS Berdasarkan NIP</h1>
+    <h1>Cek Data ASN Berdasarkan NIP</h1>
     <form id="nipForm">
       <input type="text" id="nip" placeholder="Masukkan NIP" required />
       <button type="submit">Tampilkan</button>
