--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <img src="logo.png" alt="Logo MyASN">
     </div>
 
-    <h2>Cek Data PNS Berdasarkan NIP</h2>
+    <h2>Cek Data ASN Berdasarkan NIP</h2>
 
     <p class="hasil">Hasil Data:</p>
 
@@ -145,7 +145,7 @@
         <td>: Pemerintah Kota Tangerang Selatan</td>
       </tr>
       <tr>
-        <td>Kedudukan PNS</td>
+        <td>Kedudukan ASN</td>
         <td>: Aktif</td>
       </tr>
     </table>
