--- a/home.html
+++ b/home.html
@@ -85,10 +85,10 @@
 
     // Data login ASN
     const dataASN = {
-      "19830103204102007": { nama: "Detty Aria Sukowati, S.E", password: "dety123" },
-      "199401202025011001": { nama: "Muhamad Dwi Nurul Iman, S.T", password: "iman123" },
-      "198606082025012001": { nama: "Ida Fitriyanti, S.Pd", password: "ida123" },
-      "200210102024102001": { nama: "Melina Aprilia, S.M", password: "melina123" },
+      "19830103204102007": { nama: "Detty Aria Sukowati, S.E", password: "dettyaria2007" },
+      "199401202025011001": { nama: "Muhamad Dwi Nurul Iman, S.T", password: "muhamaddwi1001" },
+      "198606082025012001": { nama: "Ida Fitriyanti, S.Pd", password: "idafitriyanti2001" },
+      "200210102024102001": { nama: "Melina Aprilia, S.M", password: "melinaaprilia200" },
     };
 
     form.addEventListener("submit", function (e) {
