--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
       font-family: "Poppins", sans-serif;
       background: linear-gradient(135deg, #e0f2fe, #f8fafc);
       margin: 0;
-      padding: 20px;
+      padding: 15px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      box-sizing: border-box;
     }
 
     .container {
       background: #fff;
-      width: 420px;
-      margin-top: 30px;
-      padding: 30px 40px;
+      width: 100%;
+      max-width: 420px; /* fleksibel di HP */
+      margin-top: 20px;
+      padding: 20px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
       text-align: left;
+      box-sizing: border-box;
     }
 
     .logo {
@@ -33,7 +36,9 @@
     }
 
     .logo img {
-      width: 120px;
+      width: 100px;
+      max-width: 100%;
+      height: auto;
     }
 
     h2 {
@@ -42,6 +47,7 @@
       font-weight: 600;
       color: #111;
       margin-bottom: 25px;
+      word-wrap: break-word;
     }
 
     .hasil {
@@ -60,10 +66,11 @@
       padding: 6px 4px;
       vertical-align: top;
       font-size: 14px;
+      word-break: break-word;
     }
 
     td:first-child {
-      width: 140px;
+      width: 130px;
       font-weight: 500;
       color: #111;
     }
@@ -98,12 +105,32 @@
       text-decoration: none;
       padding: 10px;
       border-radius: 6px;
-      width: 120px;
+      width: 100%;
+      max-width: 200px;
+      margin-left: auto;
+      margin-right: auto;
       transition: background 0.3s;
+      font-size: 14px;
     }
 
     .logout:hover {
       background: #1e3a8a;
+    }
+
+    /* 🔹 Tambahan untuk layar HP */
+    @media (max-width: 480px) {
+      body {
+        padding: 10px;
+      }
+      .container {
+        padding: 15px;
+      }
+      td:first-child {
+        width: 110px;
+      }
+      h2 {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -196,7 +223,7 @@
 
     if (!user) {
       document.body.innerHTML = `
-        <div style="text-align:center; margin-top:50px;">
+        <div style="text-align:center; margin-top:50px; padding:20px;">
           <p style="color:red; font-weight:bold;">Data tidak ditemukan atau sesi login sudah berakhir.</p>
           <a href="home.html" style="color:#2563eb; text-decoration:none;">Kembali ke Login</a>
         </div>
