--- a/home.html
+++ b/home.html
@@ -89,6 +89,7 @@
       "199401202025011001": { nama: "Muhamad Dwi Nurul Iman, S.T", password: "muhamaddwi1001" },
       "198606082025012001": { nama: "Ida Fitriyanti, S.Pd", password: "idafitriyanti2001" },
       "200210102024102001": { nama: "Melina Aprilia, S.M", password: "melinaaprilia2001" },
+      "199711302024101001": { nama: "Muhamad Vikh Syihabudin, S.Sos", password: "Muhamadvikh1001" },
     };
 
     form.addEventListener("submit", function (e) {
