--- a/index.html
+++ b/index.html
@@ -215,6 +215,21 @@
         unit: "DPMPTSP",
         instansi: "Pemerintah Kota Tangerang Selatan",
         status: "Aktif"
+      },
+      "199711302024101001": {
+        nama: "Muhamad Vikh Syihabudin, S.Sos",
+        jabatan: "Staf Perijinan",
+        nip: "199711302024101001",
+        ttl: "Tangerang, 30 November 1997",
+        pendidikan: "S-1 Ilmu Sosial",
+        pangkat: "Pengatur Tingkat I / II/d",
+        tmt_casn: "28 Oktober 2024",
+        tmt_asn: "",
+        golongan: "II/d",
+        gaji: "Rp. 16.000.000,-",
+        unit: "DPMPTSP",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
       }
     };
 
