--- a/home.html
+++ b/home.html
@@ -89,7 +89,15 @@
       "199401202025011001": { nama: "Muhamad Dwi Nurul Iman, S.T", password: "muhamaddwi1001" },
       "198606082025012001": { nama: "Ida Fitriyanti, S.Pd", password: "idafitriyanti2001" },
       "200210102024102001": { nama: "Melina Aprilia, S.M", password: "melinaaprilia2001" },
-      "199711302024101001": { nama: "Muhamad Vikh Syihabudin, S.Sos", password: "Muhamadvikh1001" },
+      "199711302024101001": { nama: "Muhamad Vikh Syihabudin, S.Sos", password: "muhamadvikh1001" },
+      "198004082025021001": { nama: "Seno, S.Kom", password: "seno1001" },
+      "197202202025011001": { nama: "Een Suhendra, S.T", password: "eenSuhendra1001" },
+      "199211202024122001": { nama: "Novi Susanti Perdana, S.E", password: "novisusanti2001"},
+      "200008292024121003": { nama: "Roysid Majid, A.Md.Kom", password: "roysid1003" },
+      "199811102025011002": { nama: "Ado Tabyanri Prakasa, S.I.Kom", password: "ado1002" },
+      "200110222025022002": { nama: "Difa Nadia Kaila, S.Li", password: "difa2002" },
+      "200003232025031002": { nama: "Miftahudin, S.Kom", password: "miftahudin1002" },
+      "197909172025022002": { nama: "Erly Enstin, S.T", password: "erly2002" },
     };
 
     form.addEventListener("submit", function (e) {
