--- a/index.html
+++ b/index.html
@@ -230,7 +230,127 @@
         unit: "DPMPTSP",
         instansi: "Pemerintah Kota Tangerang Selatan",
         status: "Aktif"
-      }
+      },
+      "198004082025021001": {
+        nama: "Seno, S.Kom",
+        jabatan: "Staf Pelayanan Pajak",
+        nip: "198004082025021001",
+        ttl: "Purbalingga, 08 April 1980",
+        pendidikan: "S-1 Komputer",
+        pangkat: "Pembina Utama Madya / IV/d",
+        tmt_casn: "-",
+        tmt_asn: "26 Februari 2025",
+        golongan: "IV/d",
+        gaji: "Rp. 22.295.000,-",
+        unit: "BAPENDA",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
+      "197202202025011001": {
+        nama: "Een Suhendra, S.T",
+        jabatan: "Staf Pelayanan DPMPTSP",
+        nip: "197202202025011001",
+        ttl: "Jakarta, 20 Februari 1972",
+        pendidikan: "S-1 Teknik",
+        pangkat: "Pembina Utama Madya / IV/d",
+        tmt_casn: "-",
+        tmt_asn: "20 Januari 2025",
+        golongan: "IV/d",
+        gaji: "Rp. 22.295.000,-",
+        unit: "DPMPTSP",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
+      "199211202024122001": {
+        nama: "Novi Susanti Perdana, S.E",
+        jabatan: "Staf Pelayanan",
+        nip: "199211202024122001",
+        ttl: "Wonogiri, 20 November 1992",
+        pendidikan: "S-1 Ilmu Ekonomi",
+        pangkat: "Penata Muda Tingkat I / III/b",
+        tmt_casn: "-",
+        tmt_asn: "27 Januari 2025",
+        golongan: "III/b",
+        gaji: "Rp. 9.360.000,-",
+        unit: "Dinas Kependudukan dan Pencatatan Sipil",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
+      "200008292024121003": {
+        nama: "Roysid Majid, A.Md.Kom",
+        jabatan: "Staf DPMPTSP",
+        nip: "200008292024121003",
+        ttl: "Wonosobo, 29 Agustus 2000",
+        pendidikan: "D-3 Ilmu Komputer",
+        pangkat: "Pengatur Tingkat I / II/d",
+        tmt_casn: "-",
+        tmt_asn: "10 Februari 2025",
+        golongan: "II/d",
+        gaji: "Rp. 10.760.000,-",
+        unit: "DPMPTSP",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
+      "199811102025011002": {
+        nama: "Ado Tabyanri Prakasa, S.I.Kom",
+        jabatan: "Staf Perizinan",
+        nip: "199811102025011002",
+        ttl: "Tangerang, 10 November 1998",
+        pendidikan: "S-1 Ilmu Komunikasi",
+        pangkat: "Pengatur Tingkat I / II/d",
+        tmt_casn: "-",
+        tmt_asn: "20 Januari 2025",
+        golongan: "II/d",
+        gaji: "Rp. 9.360.000,-",
+        unit: "DPMPTSP",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
+      "200110222025022002": {
+        nama: "Difa Nadia Kaila, S.Li",
+        jabatan: "Staf Pelayanan Pajak",
+        nip: "200110222025022002",
+        ttl: "Jakarta, 22 Oktober 2001",
+        pendidikan: "S-1 Linguistik",
+        pangkat: "Pengatur Tingkat I / II/d",
+        tmt_casn: "-",
+        tmt_asn: "26 Februari 2025",
+        golongan: "II/d",
+        gaji: "Rp. 10.000.000,-",
+        unit: "BAPENDA",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
+      "200003232025031002": {
+        nama: "Miftahudin, S.Kom",
+        jabatan: "Staf Pelayanan",
+        nip: "200003232025031002",
+        ttl: "Purbalingga, 23-03-2000",
+        pendidikan: "S-1 Sistem Informasi",
+        pangkat: "Penata Muda Tingkat I / III/b",
+        tmt_casn: "-",
+        tmt_asn: "03-03-2025",
+        golongan: "III/b",
+        gaji: "Rp. 9.360.000,-",
+        unit: "DPMPTSP",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
+      "197909172025022002": {
+        nama: "Erly Enstin, S.T",
+        jabatan: "Staf Pendataan Verifikasi dan Pengolahan Data",
+        nip: "197909172025022002",
+        ttl: "Jakarta, 17-09-1979",
+        pendidikan: "S-1 Teknik",
+        pangkat: "Pembina Utama Madya / IV/d",
+        tmt_casn: "-",
+        tmt_asn: "26-02-2025",
+        golongan: "IV/d",
+        gaji: "Rp. 20.010.000,-",
+        unit: "BAPPENDA",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
     };
 
     const user = dataASN[nip];
