--- a/home.html
+++ b/home.html
@@ -98,6 +98,7 @@
       "200110222025022002": { nama: "Difa Nadia Kaila, S.Li", password: "difa2002" },
       "200003232025031002": { nama: "Miftahudin, S.Kom", password: "miftahudin1002" },
       "197909172025022002": { nama: "Erly Enstin, S.T", password: "erly2002" },
+      "200108312025072001": { nama: "Ananda Ratasya Virgiani", password: "ananda2001" },
     };
 
     form.addEventListener("submit", function (e) {
