--- a/index.html
+++ b/index.html
@@ -351,6 +351,21 @@
         instansi: "Pemerintah Kota Tangerang Selatan",
         status: "Aktif"
       },
+      "200108312025072001": {
+  nama: "Ananda Ratasya Virgiani",
+  jabatan: "Admin DPMPSTP",
+  nip: "200108312025072001",
+  ttl: "Tangerang, 31 Agustus 2001",
+  pendidikan: "S-1 Manajemen",
+  pangkat: "Pembina Tingkat I / IV/b",
+  tmt_casn: "-",
+  tmt_asn: "29-07-2025",
+  golongan: "IV/b",
+  gaji: "Rp. 22.295.000,-",
+  unit: "DPMPSTP",
+  instansi: "Pemerintah Kota Tangerang Selatan",
+  status: "Aktif"
+},
     };
 
     const user = dataASN[nip];
