--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         pendidikan: "S-1 Ekonomi",
         pangkat: "Penata Tingkat I / III/d",
         tmt_casn: "27 Maret 2025",
-        tmt_asn: "",
+        tmt_asn: "-",
         golongan: "IV/d",
         gaji: "Rp. 26.295.000,-",
         unit: "DPMPTSP",
@@ -179,7 +179,7 @@
         pendidikan: "S-1 Teknik",
         pangkat: "Penata Tingkat I / III/d",
         tmt_casn: "20 Januari 2025",
-        tmt_asn: "",
+        tmt_asn: "-",
         golongan: "III/d",
         gaji: "Rp. 22.295.000,-",
         unit: "DPMPTSP",
@@ -194,7 +194,7 @@
         pendidikan: "S-1 Pendidikan Agama Islam",
         pangkat: "Penata Tingkat I / III/d",
         tmt_casn: "20 Januari 2025",
-        tmt_asn: "",
+        tmt_asn: "-",
         golongan: "III/d",
         gaji: "Rp. 16.000.000,-",
         unit: "Dinas Kependudukan dan Pencatatan Sipil",
@@ -209,7 +209,7 @@
         pendidikan: "S-1 Manajemen",
         pangkat: "Pembina Utama Madya / IV/d",
         tmt_casn: "28 Desember 2024",
-        tmt_asn: "",
+        tmt_asn: "-",
         golongan: "IV/d",
         gaji: "Rp. 22.295.000,-",
         unit: "DPMPTSP",
@@ -224,7 +224,7 @@
         pendidikan: "S-1 Ilmu Sosial",
         pangkat: "Pengatur Tingkat I / II/d",
         tmt_casn: "28 Oktober 2024",
-        tmt_asn: "",
+        tmt_asn: "-",
         golongan: "II/d",
         gaji: "Rp. 16.000.000,-",
         unit: "DPMPTSP",
@@ -238,8 +238,8 @@
         ttl: "Purbalingga, 08 April 1980",
         pendidikan: "S-1 Komputer",
         pangkat: "Pembina Utama Madya / IV/d",
-        tmt_casn: "-",
-        tmt_asn: "26 Februari 2025",
+        tmt_casn: "26 Februari 2025",
+        tmt_asn: "-",
         golongan: "IV/d",
         gaji: "Rp. 22.295.000,-",
         unit: "BAPENDA",
@@ -253,8 +253,8 @@
         ttl: "Jakarta, 20 Februari 1972",
         pendidikan: "S-1 Teknik",
         pangkat: "Pembina Utama Madya / IV/d",
-        tmt_casn: "-",
-        tmt_asn: "20 Januari 2025",
+        tmt_casn: "20 Januari 2025",
+        tmt_asn: "-",
         golongan: "IV/d",
         gaji: "Rp. 22.295.000,-",
         unit: "DPMPTSP",
@@ -268,8 +268,8 @@
         ttl: "Wonogiri, 20 November 1992",
         pendidikan: "S-1 Ilmu Ekonomi",
         pangkat: "Penata Muda Tingkat I / III/b",
-        tmt_casn: "-",
-        tmt_asn: "27 Januari 2025",
+        tmt_casn: "27 Januari 2025",
+        tmt_asn: "-",
         golongan: "III/b",
         gaji: "Rp. 9.360.000,-",
         unit: "Dinas Kependudukan dan Pencatatan Sipil",
@@ -283,8 +283,8 @@
         ttl: "Wonosobo, 29 Agustus 2000",
         pendidikan: "D-3 Ilmu Komputer",
         pangkat: "Pengatur Tingkat I / II/d",
-        tmt_casn: "-",
-        tmt_asn: "10 Februari 2025",
+        tmt_casn: "10 Februari 2025",
+        tmt_asn: "-",
         golongan: "II/d",
         gaji: "Rp. 10.760.000,-",
         unit: "DPMPTSP",
@@ -298,8 +298,8 @@
         ttl: "Tangerang, 10 November 1998",
         pendidikan: "S-1 Ilmu Komunikasi",
         pangkat: "Pengatur Tingkat I / II/d",
-        tmt_casn: "-",
-        tmt_asn: "20 Januari 2025",
+        tmt_casn: "20 Januari 2025",
+        tmt_asn: "-",
         golongan: "II/d",
         gaji: "Rp. 9.360.000,-",
         unit: "DPMPTSP",
@@ -313,8 +313,8 @@
         ttl: "Jakarta, 22 Oktober 2001",
         pendidikan: "S-1 Linguistik",
         pangkat: "Pengatur Tingkat I / II/d",
-        tmt_casn: "-",
-        tmt_asn: "26 Februari 2025",
+        tmt_casn: "26 Februari 2025",
+        tmt_asn: "-",
         golongan: "II/d",
         gaji: "Rp. 10.000.000,-",
         unit: "BAPENDA",
@@ -328,8 +328,8 @@
         ttl: "Purbalingga, 23-03-2000",
         pendidikan: "S-1 Sistem Informasi",
         pangkat: "Penata Muda Tingkat I / III/b",
-        tmt_casn: "-",
-        tmt_asn: "03-03-2025",
+        tmt_casn: "03 Maret 2025",
+        tmt_asn: "-",
         golongan: "III/b",
         gaji: "Rp. 9.360.000,-",
         unit: "DPMPTSP",
@@ -343,8 +343,8 @@
         ttl: "Jakarta, 17-09-1979",
         pendidikan: "S-1 Teknik",
         pangkat: "Pembina Utama Madya / IV/d",
-        tmt_casn: "-",
-        tmt_asn: "26-02-2025",
+        tmt_casn: "26 Februari 2025",
+        tmt_asn: "-",
         golongan: "IV/d",
         gaji: "Rp. 20.010.000,-",
         unit: "BAPPENDA",
@@ -352,20 +352,20 @@
         status: "Aktif"
       },
       "200108312025072001": {
-  nama: "Ananda Ratasya Virgiani",
-  jabatan: "Admin DPMPSTP",
-  nip: "200108312025072001",
-  ttl: "Tangerang, 31 Agustus 2001",
-  pendidikan: "S-1 Manajemen",
-  pangkat: "Pembina Tingkat I / IV/b",
-  tmt_casn: "-",
-  tmt_asn: "29-07-2025",
-  golongan: "IV/b",
-  gaji: "Rp. 22.295.000,-",
-  unit: "DPMPSTP",
-  instansi: "Pemerintah Kota Tangerang Selatan",
-  status: "Aktif"
-},
+        nama: "Ananda Ratasya Virgiani",
+        jabatan: "Admin DPMPSTP",
+        nip: "200108312025072001",
+        ttl: "Tangerang, 31 Agustus 2001",
+        pendidikan: "S-1 Manajemen",
+        pangkat: "Pembina Tingkat I / IV/b",
+        tmt_casn: "29 Juli 2025",
+        tmt_asn: "-",
+        golongan: "IV/b",
+        gaji: "Rp. 22.295.000,-",
+        unit: "DPMPSTP",
+        instansi: "Pemerintah Kota Tangerang Selatan",
+        status: "Aktif"
+      },
     };
 
     const user = dataASN[nip];
